<resources>
    <string name="app_name">FBLA_Project</string>
    <string name="title_activity_attraction">AttractionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="has_bathrooms">Has Bathrooms</string>
    <string name="restaraunts_concessions_nearby">Restaurants/Concessions Nearby</string>
    <string name="wheelchair_accessible">Wheelchair Accessible</string>
    <string name="search_attractions">Search Attractions</string>
    <string name="within_40_miles">Within: 30 Miles</string>
    <string name="no_results_found">No Results Found</string>
    <string name="search">Search</string>
    <string name="ndl">No Distance Limit</string>

    <string-array name="spinner_options">
        <item>Any Type</item>
        <item>Vistas/Landscapes</item>
        <item>Historical</item>
        <item>Museums/Fine Arts</item>
        <item>Fun &amp; Adventure</item>
        <item>Clubs/Bars</item>
        <item>Sports</item>
    </string-array>
    <string name="title_activity_map">mapActivity</string>
</resources>