<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SelectActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/search_attractions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="20sp"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:text="@string/within_40_miles"
        android:textAlignment="textStart"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="20sp"
        android:max="10"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:progress="3"
        android:scrollbarSize="10dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seekBar"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:text="@string/within_40_miles"
        android:textAlignment="textStart"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginTop="20sp"
        android:max="6"
        android:paddingStart="50sp"
        android:paddingEnd="50sp"
        android:progress="3"
        android:scrollbarSize="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/seekBar2"
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        android:paddingStart="50sp"
        android:paddingEnd="50sp">

        <Spinner
            android:id="@+id/spinner"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:entries="@array/spinner_options"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />


        <CheckBox
            android:id="@+id/bathroomCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/checkboxbg"
            android:text="@string/has_bathrooms"
            android:layout_gravity="center"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/foodCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3A3232"
            android:layout_gravity="center"
            android:text="@string/restaraunts_concessions_nearby"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/accessibleCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/checkboxbg2"
            android:text="@string/wheelchair_accessible"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/search"
            android:textColor="@color/white" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookmarkPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_baseline_bookmark_border_24" />
</RelativeLayout>